<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="buttonClick"
        android:text="@string/goback" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:textSize="30sp"
        android:text="@string/devby"
        android:textStyle="bold|italic"
        android:textColor="#000000"/>
    <View
        android:id="@+id/bar"
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="#000000"
        android:layout_below="@+id/textView2" />

    <TextView
        android:id="@+id/bg"
        android:layout_width="wrap_content"
        android:layout_height="185dp"
        android:background="@android:color/darker_gray"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true" />

    <ImageView
        android:id="@+id/tu"
        android:scaleType="fitXY"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/border"
        app:srcCompat="@drawable/ic_launcher"
        android:layout_marginEnd="61dp"
        android:layout_alignTop="@+id/eu"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:id="@+id/eu"
        android:scaleType="fitXY"
        android:background="@drawable/border"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="54dp"
        android:layout_marginTop="41dp"
        app:srcCompat="@drawable/ic_launcher"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/me"
        android:textSize="20sp"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/eu"
        android:layout_alignParentStart="true"
        android:layout_marginStart="25dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notme"
        android:textSize="20sp"
        android:layout_marginEnd="44dp"
        android:layout_alignBaseline="@+id/textView4"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menmec"
        android:gravity="center"
        android:layout_below="@+id/textView4"
        android:layout_alignStart="@+id/eu"
        android:layout_alignEnd="@+id/eu" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notmenmec"
        android:gravity="center"
        android:layout_below="@+id/textView5"
        android:layout_alignStart="@+id/tu"
        android:layout_alignEnd="@+id/tu" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/project"
        android:textSize="28sp"
        android:layout_below="@+id/bg"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textSize="18sp"
        android:text="@string/cadeira"
        android:layout_below="@+id/textView8"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/lei"
        android:layout_below="@+id/textView9"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:text="@string/ua"
        android:layout_below="@+id/textView10"
        android:layout_toEndOf="@+id/textView6"
        android:layout_alignParentStart="true" />

</RelativeLayout>