<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@+id/logout"
        android:layout_centerHorizontal="true"
        android:scaleType="fitXY"
        android:background="@drawable/border"
        app:srcCompat="@mipmap/ic_launcher" />

    <ImageView
        android:id="@+id/bmiImage"
        android:scaleType="fitXY"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        app:srcCompat="@mipmap/ic_launcher"
        android:layout_below="@+id/bmi"
        android:layout_alignStart="@+id/imageView"
        android:layout_marginTop="18dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:textStyle="bold|italic"
        android:textColor="#000000"/>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:paddingRight="5dp"
        android:paddingLeft="5dp"
        android:onClick="buttonClick"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_simple"/>

    <TextView
        android:id="@+id/bmi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:text="@string/bmi"
        android:layout_below="@+id/avg"
        android:layout_centerHorizontal="true"
        android:textStyle="bold|italic"
        android:textColor="#000000"/>

    <Button
        android:id="@+id/plan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plan"
        android:ems="9"
        android:onClick="buttonClick"
        android:background="@drawable/button_simple"
        android:layout_marginTop="55dp"
        android:layout_below="@+id/bmiImage"
        android:layout_toStartOf="@+id/bmiImage" />

    <Button
        android:id="@+id/about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:ems="9"
        android:onClick="buttonClick"
        android:background="@drawable/button_simple"
        android:layout_alignBaseline="@+id/plan"
        android:layout_alignBottom="@+id/plan"
        android:layout_toEndOf="@+id/bmiImage" />


    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:text="@string/tipofday"
        android:textStyle="bold|italic"
        android:textColor="#000000"
        android:layout_below="@+id/plan"
        android:layout_alignStart="@+id/plan" />
    <View
        android:id="@+id/bar"
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="#000000"
        android:layout_toEndOf="@+id/tip"
        android:layout_alignStart="@+id/header"
        android:layout_marginTop="12dp"
        android:layout_below="@+id/header" />
    <TextView
        android:id="@+id/tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/header"
        android:layout_below="@+id/bar"
        android:layout_marginTop="11dp" />

    <ImageButton
        android:id="@+id/logout"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/logout"
        android:onClick="buttonClick"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/logout"/>

    <TextView
        android:id="@+id/avg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button"
        android:text="@string/avg"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp"
        android:textStyle="bold|italic"
        android:textColor="#000000"/>

    <Button
        android:id="@+id/buttonimg"
        android:onClick="buttonClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/upload" />

</RelativeLayout>