<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView19"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="56dp"
        android:gravity="center"
        android:text="@string/jogex"
        android:textSize="23sp" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_below="@+id/textView19"
        android:layout_alignParentStart="true"
        android:text="@string/jog"
        android:layout_marginTop="40dp" />

    <TextView
        android:id="@+id/pleaserun"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:text="@string/pleaserun"
        android:layout_below="@+id/textView20"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pleaserun"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="89dp"
        android:text="@string/data" />

    <TextView
        android:id="@+id/data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView22"
        android:layout_centerHorizontal="true"
        android:background="@drawable/round"
        android:layout_marginTop="24dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:onClick="buttonClick"
        android:text="@string/finish" />

    <View
        android:id="@+id/bar"
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_marginTop="45dp"
        android:layout_marginBottom="27dp"
        android:background="#000000" />
    <View
        android:id="@+id/bar2"
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_marginTop="95dp"
        android:layout_marginBottom="27dp"
        android:background="#000000" />
</RelativeLayout>